<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animationView"
        android:layout_width="@dimen/progress_animation_size"
        android:layout_height="@dimen/progress_animation_size"
        android:layout_gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="false"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/cut_video_animation"
        app:lottie_speed="1.5" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:overScrollMode="never"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:id="@+id/content_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.appbar.AppBarLayout
                        android:id="@+id/appBar_layout"
                        android:layout_width="match_parent"
                        android:layout_height="?attr/actionBarSize"
                        android:background="@drawable/toolbar_background"
                        android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                        app:elevation="0dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <androidx.appcompat.widget.Toolbar
                            android:id="@+id/toolbar"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:title=""/>

                    </com.google.android.material.appbar.AppBarLayout>

                    <ImageView
                        android:id="@+id/iv_movie_poster"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/image_toolbar_height"
                        android:layout_marginTop="@dimen/material_margin_small"
                        android:scaleType="centerInside" />

                </FrameLayout>
                <!--<ImageView
                    android:id="@+id/iv_movie_poster"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/image_toolbar_height"
                    android:layout_marginTop="@dimen/material_margin_small"
                    android:scaleType="centerInside" />-->

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/material_margin_large"
                    android:layout_marginTop="@dimen/material_margin_normal"
                    android:layout_marginEnd="@dimen/material_margin_normal">

                    <TextView
                        android:id="@+id/tv_movie_title"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:textSize="@dimen/movie_title_text_size"
                        app:layout_constraintEnd_toStartOf="@+id/cb_favorite"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="Aquamen"
                        tools:textColor="@color/black"/>

                    <CheckBox
                        android:id="@+id/cb_favorite"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:button="@drawable/selector_favorite"
                        app:layout_constraintBottom_toBottomOf="@+id/tv_movie_title"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/tv_movie_title"
                        android:layout_marginStart="@dimen/spacing_normal_16"/>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_watch"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/btn_watch_height"
                        android:layout_marginTop="@dimen/material_margin_normal"
                        android:backgroundTint="@color/purple_200"
                        android:padding="@dimen/material_margin_small"
                        android:singleLine="true"
                        android:text="@string/watch_str"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        app:cornerRadius="@dimen/btn_corner_radius"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_movie_title"
                        app:layout_constraintVertical_bias="0.0" />

                    <RatingBar
                        android:id="@+id/rating_bar"
                        style="@style/Base.Widget.AppCompat.RatingBar.Small"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/material_margin_normal"
                        android:isIndicator="true"
                        android:numStars="5"
                        android:progressBackgroundTint="@color/colorControlNormal"
                        android:stepSize="0.5"
                        app:layout_constraintBottom_toBottomOf="@+id/btn_watch"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/btn_watch"
                        tools:rating="5" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/tv_movie_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/material_margin_large"
                    android:layout_marginTop="@dimen/material_margin_large"
                    android:layout_marginEnd="@dimen/material_margin_normal"
                    android:textColor="@color/textColorGrey"
                    tools:text="@string/test_description" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_cast"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/material_margin_large"
                    android:layout_marginTop="@dimen/material_margin_normal"
                    android:layout_marginEnd="@dimen/material_margin_normal"
                    android:orientation="horizontal"
                    android:overScrollMode="never"
                    android:scrollbars="vertical"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_behavior="@string/appbar_scrolling_view_behavior"
                    tools:listitem="@layout/item_actor" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/material_margin_large"
                    android:layout_marginTop="@dimen/material_margin_normal"
                    android:layout_marginEnd="@dimen/material_margin_normal"
                    android:layout_marginBottom="@dimen/material_margin_normal">

                    <TextView
                        android:id="@+id/tv_studio_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/studio_label"
                        android:textColor="@color/white"
                        android:textSize="@dimen/content_text_size"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_genre_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tv_studio_label"
                        android:layout_marginTop="@dimen/material_margin_small"
                        android:text="@string/genre_label"
                        android:textColor="@color/white"
                        android:textSize="@dimen/content_text_size"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_studio_label" />

                    <TextView
                        android:id="@+id/tv_login"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tv_genre_label"
                        android:layout_marginTop="@dimen/material_margin_small"
                        android:text="@string/year_label"
                        android:textColor="@color/white"
                        android:textSize="@dimen/content_text_size"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_genre_label" />

                    <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/guideline1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintGuide_percent="0.2" />

                    <TextView
                        android:id="@+id/tv_studio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:textColor="@color/textColorGrey"
                        app:layout_constraintBottom_toBottomOf="@+id/tv_studio_label"
                        app:layout_constraintStart_toStartOf="@id/guideline1"
                        app:layout_constraintTop_toTopOf="@+id/tv_studio_label"
                        tools:text="testField" />

                    <TextView
                        android:id="@+id/tv_genre"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/textColorGrey"
                        app:layout_constraintBottom_toBottomOf="@+id/tv_genre_label"
                        app:layout_constraintStart_toStartOf="@id/guideline1"
                        app:layout_constraintTop_toTopOf="@+id/tv_genre_label"
                        tools:text="testField" />

                    <TextView
                        android:id="@+id/tv_year"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/textColorGrey"
                        app:layout_constraintBottom_toBottomOf="@+id/tv_login"
                        app:layout_constraintStart_toStartOf="@id/guideline1"
                        app:layout_constraintTop_toTopOf="@+id/tv_login"
                        tools:text="testField" />

                </androidx.constraintlayout.widget.ConstraintLayout>


            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>